update: 补充 Code101 - 跳转语句metadata

--- a/Code101/C语言入门/009跳转语句.md
+++ b/Code101/C语言入门/009跳转语句.md
@@ -1,3 +1,22 @@
+---
+title: 跳转语句					#文章名
+date: 2025-08-16					#发布时间
+updated: 				#更新时间
+
+feature: false   			# 设置为精选文章，会显示在首页的精选区域
+
+categories: 
+  - Code101   			#分类
+tags:
+  - c/cpp					#标签
+
+mp3: 
+cover: /images/article-cover/Code101.png				#地址均在/images/article-cover/··（规范命名，/文章名）
+
+abstract: 				#短摘要 
+abstracts: |				#长摘要
+---
+
 # C语言四大跳转
 
 在程序执行过程中，有时需要改变语句的执行顺序，这时就要用到 **跳转语句**。C语言中的跳转语句主要有以下几种：
